src/tests/errors/23_assign_type_mismatch/source.z42
namespace Demo;

void Main() {
    int x = "hello";
}
